# GrandfathersOfTheSahara

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  project.godot
.mono/assemblies/Debug/: api_hash_cache.cfg
.mono/metadata/: ide_messaging_meta.txt
godot/: GrandfathersOfTheSahara.gdextension  GrandfathersOfTheSahara.gdextension.uid  icon.svg.import  project.godot
godot/assets/fonts/: Saleha.ttf.import
godot/assets/images/: background.jpg.import
godot/components/: text_button.tscn
godot/config/: environment_config.tscn  tileset.toml  toml_loader.tscn
godot/game/: board_component.tscn  entity_manager.tscn  scene_loader.tscn
godot/game/objects/: action_collision.tscn  board.tscn  hover_outline.tscn  player_building.tscn  player_token.tscn  tile.tscn  tile_deck.tscn  tile_placement_area.tscn  treasure.tscn
godot/game/ui/: tooltip.tscn
godot/menus/: background.tscn  main_menu.tscn  settings.tscn
godot/styles/: box_container.tres
rust/: .gitignore  Cargo.toml  bacon.toml
rust/src/: game.rs  lib.rs  scenes.rs  ui.rs  util.rs
rust/src/components/: ui.rs
rust/src/game/: components.rs  entities.rs  objects.rs
rust/src/game/components/: board_component.rs  hover_outline.rs  tile_component.rs
rust/src/game/entities/: deck.rs  player.rs  tile.rs  treasure.rs
rust/src/game/objects/: tile.rs  treasure.rs
rust/src/util/: debug.rs  flags.rs  input.rs  loader.rs
rust/src/util/loader/: test.rs
rust/src/util/tests/: loader_test.rs
scenes/game/: Board.tscn
src/: board.rs  main.rs
src/board/: tile.rs
(+21 files in other folders)
