[package]
name = "grandfathers_of_the_sahara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
const_format = "0.2.34"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
thiserror = "2.0.11"
