[package]
name = "grandfathers_of_the_sahara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0
debug = 2

[dependencies]
# phf = { version = "0.12.1", features = ["macros"] }
const_format = "0.2.34"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
thiserror = "2.0.11"
toml = "0.9.5"
